fix height issues glitch on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 
 html,
 body {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--primary-color);
   color: var(--text-color-secondary);
 }
